0.6.6/_sources/api/napari.utils.CyclicLabelColormap.rst
napari.utils.CyclicLabelColormap
================================

.. currentmodule:: napari.utils

.. autoclass:: CyclicLabelColormap
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~CyclicLabelColormap.construct
   
   
      ~CyclicLabelColormap.copy
   
   
      ~CyclicLabelColormap.dict
   
   
      ~CyclicLabelColormap.enums_as_values
   
   
      ~CyclicLabelColormap.from_orm
   
   
      ~CyclicLabelColormap.json
   
   
      ~CyclicLabelColormap.map
   
   
      ~CyclicLabelColormap.parse_file
   
   
      ~CyclicLabelColormap.parse_obj
   
   
      ~CyclicLabelColormap.parse_raw
   
   
      ~CyclicLabelColormap.reset
   
   
      ~CyclicLabelColormap.schema
   
   
      ~CyclicLabelColormap.schema_json
   
   
      ~CyclicLabelColormap.shuffle
   
   
      ~CyclicLabelColormap.update
   
   
      ~CyclicLabelColormap.update_forward_refs
   
   
      ~CyclicLabelColormap.validate
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~CyclicLabelColormap.colorbar
      ~CyclicLabelColormap.events
      
      
      
      
      
      
      
      
      
      
      
   
   

   .. rubric:: Details