0.7.0/_sources/api/napari.utils.CyclicLabelColormap.rst
napari.utils.CyclicLabelColormap
================================

.. currentmodule:: napari.utils

.. autoclass:: CyclicLabelColormap
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~CyclicLabelColormap.construct
   
   
      ~CyclicLabelColormap.copy
   
   
      ~CyclicLabelColormap.dict
   
   
      ~CyclicLabelColormap.enums_as_values
   
   
      ~CyclicLabelColormap.from_orm
   
   
      ~CyclicLabelColormap.json
   
   
      ~CyclicLabelColormap.map
   
   
      ~CyclicLabelColormap.model_construct
   
   
      ~CyclicLabelColormap.model_copy
   
   
      ~CyclicLabelColormap.model_dump
   
   
      ~CyclicLabelColormap.model_dump_json
   
   
      ~CyclicLabelColormap.model_json_schema
   
   
      ~CyclicLabelColormap.model_parametrized_name
   
   
      ~CyclicLabelColormap.model_post_init
   
   
      ~CyclicLabelColormap.model_rebuild
   
   
      ~CyclicLabelColormap.model_validate
   
   
      ~CyclicLabelColormap.model_validate_json
   
   
      ~CyclicLabelColormap.model_validate_strings
   
   
      ~CyclicLabelColormap.parse_file
   
   
      ~CyclicLabelColormap.parse_obj
   
   
      ~CyclicLabelColormap.parse_raw
   
   
      ~CyclicLabelColormap.reset
   
   
      ~CyclicLabelColormap.schema
   
   
      ~CyclicLabelColormap.schema_json
   
   
      ~CyclicLabelColormap.shuffle
   
   
      ~CyclicLabelColormap.update
   
   
      ~CyclicLabelColormap.update_forward_refs
   
   
      ~CyclicLabelColormap.validate
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~CyclicLabelColormap.colorbar
      ~CyclicLabelColormap.events
      ~CyclicLabelColormap.model_computed_fields
      ~CyclicLabelColormap.model_config
      ~CyclicLabelColormap.model_extra
      ~CyclicLabelColormap.model_fields
      ~CyclicLabelColormap.model_fields_set
      
      
      
      
      
      
      
      
      
      
      
   
   

   .. rubric:: Details